responsivo login e cadastro

--- a/pages/register.html
+++ b/pages/register.html
@@ -17,7 +17,7 @@
       <div class="caixa_conteudo_login">
         <div class="caixa">
           <div class="header_caixa">
-            <a href="../pages/index.html">
+            <a href="../index.html">
               Voltar para pagina
               <img src="../img/setaBranca.png" alt="">
             </a>
@@ -27,7 +27,7 @@
           </div>
         </div>
       </div>
-      <div class="login_form">
+      <div class="login_form1">
         <div class="form_inputs">
 
           <div class="escrita_form">
