--- a/pages/disciplinas.html
+++ b/pages/disciplinas.html
@@ -14,7 +14,7 @@
     <header>
         <div class="container_header_disciplinas">
             <div class="links_disciplinas">
-                <a href="../pages/index.html"><img src="../img/logogGrandeBranca.png" alt=""></a>
+                <a href="../index.html"><img src="../img/logogGrandeBranca.png" alt=""></a>
             </div>
             <div class="pesquisar">
                 <div class="barra_pesquisa">
