--- a/pages/login.html
+++ b/pages/login.html
@@ -17,7 +17,7 @@
       <div class="caixa_conteudo_login">
         <div class="caixa">
           <div class="header_caixa">
-            <a href="../pages/index.html">
+            <a href="../index.html">
               Voltar para página
               <img src="../img/setaBranca.png" alt="">
             </a>
@@ -29,7 +29,7 @@
       </div>
 
       <!-- Segundo -->
-      <div class="login_form">
+      <div class="login_form1">
         <div class="form_inputs">
 
           <div class="escrita_form">
