nome e icone das paginas

--- a/pages/creditos.html
+++ b/pages/creditos.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Galeria de Projetos</title>
+    <title>VCensinos | Creditos</title>
+    <link rel="shortcut icon" href="../img/logoPequenaBranca.png" type="image/x-icon">
     <link rel="stylesheet" href="../css/creditos.css">
     <link rel="stylesheet" href="../css/disciplinas.css">
     <link rel="stylesheet" href="../css/index.css">
@@ -84,7 +85,7 @@
         <img src="BILL.jpg" alt="Descrição do Projeto 1">
     </section>
 
-    
+
     <!-- footer -->
     <footer>
         <div class="container_footer">
