--- a/pages/painel.html
+++ b/pages/painel.html
@@ -6,7 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="../css/painel.css">
   <link rel="stylesheet" href="../css/disciplinas.css">
-  <title>Painel de Usuário</title>
+  <link rel="shortcut icon" href="../img/logoPequenaBranca.png" type="image/x-icon">
+  <title>VCensinos | Painel</title>
 </head>
 
 <body>
@@ -14,7 +15,7 @@
   <header>
     <div class="container_header_disciplinas">
       <div class="links_disciplinas">
-        <a href="../pages/index.html"><img src="../img/logogGrandeBranca.png" alt=""></a>
+        <a href="../index.html"><img src="../img/logogGrandeBranca.png" alt=""></a>
         <a href="../pages/disciplinas.html">Explorar</a>
         <a href="">Quem somos?</a>
       </div>
