--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   <link rel="stylesheet" href="../css/index.css">
   <link rel="stylesheet" href="../css/disciplinas.css">
   <link rel="stylesheet" href="style.css">
-  <title>Document</title>
+  <link rel="shortcut icon" href="img/logoPequenaBranca.png" type="image/x-icon">
+  <title>VCensinos | Inicio</title>
 </head>
 
 <body>
