--- a/pages/disciplinas.html
+++ b/pages/disciplinas.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>VCensinos | Explorar</title>
+    <link rel="shortcut icon" href="../img/logoPequenaBranca.png" type="image/x-icon">
     <link rel="stylesheet" href="../css/disciplinas.css">
     <link rel="stylesheet" href="../css/index.css">
 </head>
