--- a/pages/login.html
+++ b/pages/login.html
@@ -4,8 +4,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Login</title>
+  <title>VCensinos | Login</title>
   <link rel="stylesheet" href="../css/login_cadastro.css">
+  <link rel="shortcut icon" href="../img/logoPequenaBranca.png" type="image/x-icon">
   <script type="module" src="https://www.gstatic.com/firebasejs/11.0.2/firebase-app.js"></script>
   <script type="module" src="https://www.gstatic.com/firebasejs/11.0.2/firebase-auth.js"></script>
 </head>
