--- a/pages/register.html
+++ b/pages/register.html
@@ -4,7 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Cadastro</title>
+  <title>VCensinos | Cadastro</title>
+  <link rel="shortcut icon" href="../img/logoPequenaBranca.png" type="image/x-icon">
   <script type="module" src="https://www.gstatic.com/firebasejs/11.0.2/firebase-app.js"></script>
   <script type="module" src="https://www.gstatic.com/firebasejs/11.0.2/firebase-auth.js"></script>
   <link rel="stylesheet" href="../css/login_cadastro.css"> <!-- Estilo compartilhado -->
