criacao dor cards de java, banco, illustrator e photoshop

--- a/Pagina_disciplina/Banco_modulo2/banco2.html
+++ b/Pagina_disciplina/Banco_modulo2/banco2.html
@@ -25,6 +25,7 @@
 
     </header>
 
+
     <!-- quadrado do compratilhe -->
     <div class="caixa_branca" id="caixa_branca">
         <div class="popup">
@@ -59,7 +60,7 @@
         </div>
     </div>
 
-    <script src="../java_modulo1/java1.js"></script>
+    <script src="../Banco_modulo2/banco2.js"></script>
 </body>
 
 </html>
