--- a/Pagina_disciplina/photoshop/photoshop.html
+++ b/Pagina_disciplina/photoshop/photoshop.html
@@ -59,7 +59,7 @@
         </div>
     </div>
 
-    <script src="../java_modulo1/java1.js"></script>
+    <script src="../photoshop/photoshop.js"></script>
 </body>
 
 </html>
