--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <header>
     <div class="container_header_disciplinas">
       <div class="links_disciplinas">
-        <a href="../pages/index.html"><img src="../img/logogGrandeBranca.png" alt=""></a>
+        <a href="index.html"><img src="../img/logogGrandeBranca.png" alt=""></a>
         <a href="../pages/disciplinas.html">Explorar</a>
         <a href="#quem_somos">Quem Somos?</a>
         <a href="../pages/creditos.html">Creditos</a>
