--- a/pages/creditos.html
+++ b/pages/creditos.html
@@ -32,58 +32,63 @@
 
     <!-- Conteudo -->
 
-    <section id="projeto1">
-        <div class="escrita">
-            <h1>Banco de Dados</h1>
-            <p>Bancos de Dados são sistemas que armazenam e organizam dados de maneira estruturada, facilitando o
-                acesso, a manipulação e a gestão desses dados. Eles são projetados para lidar com grandes volumes de
-                informações e permitir consultas rápidas, além de garantir integridade e segurança.</p>
-        </div>
-        <img src="BILL.jpg" alt="Descrição do Projeto 1">
-    </section>
+    <div class="introducao">
+        <div class="container_introducao">
+            <h1>Nossos Creditos</h1>
+            <p>Aqui está o pessoal que fez todo este site acontecer!!</p>
+            <div class="linha"></div>
 
-    <section id="projeto1">
-        <div class="escrita">
-            <h1>HTML/CSS</h1>
-            <p>
-                HTML (HyperText Markup Language) e CSS (Cascading Style Sheets) são as tecnologias principais para criar
-                páginas web. O HTML estrutura o conteúdo, organizando textos, imagens e links, enquanto o CSS define o
-                estilo visual, como cores, fontes e layouts. Juntas, elas possibilitam criar sites funcionais,
-                organizados e visualmente atraentes. </p>
         </div>
-        <img src="BILL.jpg" alt="Descrição do Projeto 1">
-    </section>
 
-    <section id="projeto1">
-        <div class="escrita">
-            <h1>Computação Gráfica</h1>
-            <p>A computação gráfica é a área tecnológica que estuda e realiza a manipulação de dados visuais e
-                geométricos. Isso nada mais é do que materializar todas as animações, gráficos e informações que são
-                vistas no dia a dia através das redes sociais</p>
-        </div>
-        <img src="BILL.jpg" alt="Descrição do Projeto 1">
-    </section>
+    </div>
 
-    <section id="projeto1">
-        <div class="escrita">
-            <h1>Java</h1>
-            <p>Java é uma linguagem de programação focada na prática, neste curso você aprenderá o pensamento lógico e a
-                como criar seus próprios sistemas em java, podendo assim automatizar diversos tipos de processos e
-                aumentar sua experiência e proficiência com tecnologia</p>
-        </div>
-        <img src="BILL.jpg" alt="Descrição do Projeto 1">
-    </section>
 
-    <section id="projeto1">
-        <div class="escrita">
-            <h1>Web</h1>
-            <p>Um site é um conjunto de páginas acessadas pela internet, criado para informar ou oferecer serviços. Sua
-                criação envolve planejamento, design visual, desenvolvimento com linguagens como HTML e CSS ou
-                ferramentas como WordPress. Após isso, é hospedado em um servidor e vinculado a um domínio. Por fim, o
-                site é testado, publicado e mantido com atualizações.</p>
+    <div class="grupos">
+
+        <!-- banco -->
+        <div class="container_grupos">
+            <div class="escrita_grupos">
+                <h1>Equipe Banco de Dados</h1>
+                <p>Bancos de Dados são sistemas que armazenam e organizam dados de maneira estruturada, facilitando o acesso, a manipulação e a gestão desses dados. Eles são projetados para lidar com grandes volumes de informações e permitir consultas rápidas, além de garantir integridade e segurança.</p>
+
+                <p><span>Lider:</span> Gabriel Sandes</p>
+
+                <p><span>Integrantes: </span> Gabriel Bandasz, Pedro Flores, Camille Brito, Rafaela Cardoso, Gabriely Mello, Yndaia Centeno, Mayara Maciel, Flávia Silva, Vitoria Gabriela e Vitor Rosa</p>
+            </div>
+            <img src="../img/grupos/bandoDeDados.jpeg" alt="">
         </div>
-        <img src="BILL.jpg" alt="Descrição do Projeto 1">
-    </section>
+
+        <!-- computacao -->
+        <div class="container_grupos">
+            <div class="escrita_grupos">
+                <h1>Equipe de Computacao Gráfica</h1>
+                <p>A computação gráfica é a área tecnológica que estuda e realiza a manipulação de dados visuais e geométricos. Isso nada mais é do que materializar todas as animações, gráficos e informações que são vistas no dia a dia através das redes sociais.</p>
+                <p><span>Lider:</span> Arthur de Brito</p>
+                <p><span>Integrantes: </span> Anna espolavory, Mauricio, aldrey, Gabriel, Bernardo, Gustavo, Rafaela, Julia.</p>
+            </div>
+            <img src="../img/grupos/computacao.jpeg" alt="">
+        </div>
+        <!-- java-->
+        <div class="container_grupos">
+            <div class="escrita_grupos">
+                <h1>Equipe de Java</h1>
+                <p>Java é uma linguagem de programação focada na prática, neste curso você aprenderá o pensamento lógico e a como criar seus próprios sistemas em java, podendo assim automatizar diversos tipos de processos e aumentar sua experiência e proficiência com tecnologia</p>
+                <p><span>Lider:</span> Arthur Vargas</p>
+                <p><span>Integrantes: </span> Joaquim Barbosa, Leonardo Schmitt, Klint Burzlaff, Leonel Enrrique,vitor fernando, William flores, Ariel feix, Ryan yuri rammos</p>
+            </div>
+            <img src="../img/grupos/" alt="">
+        </div>
+        <!-- web -->
+        <div class="container_grupos">
+            <div class="escrita_grupos">
+                <h1>Equipe de Web</h1>
+                <p>HTML (HyperText Markup Language) e CSS (Cascading Style Sheets) são as principais tecnologias para criar páginas web. O HTML é responsável por estruturar o conteúdo, organizando textos, imagens e links, enquanto o CSS cuida do estilo visual, definindo cores, fontes e layouts. Juntas, elas permitem criar sites funcionais, organizados e visualmente atraentes, sendo essenciais para o desenvolvimento de qualquer página na internet.</p>
+                <p><span>Lider:</span> Vitoria</p>
+                <p><span>Integrantes: </span> Isadora, Lucas crippa, Nicoly, Lucas Matheus, Mateus diolinda, isaac Ramos, Igor, benedeto, Antônio.</p>
+            </div>
+            <img src="../img/grupos/" alt="">
+        </div>
+    </div>
 
 
     <!-- footer -->
