card de sistema creditos

--- a/pages/creditos.html
+++ b/pages/creditos.html
@@ -88,6 +88,18 @@
             </div>
             <img src="../img/grupos/" alt="">
         </div>
+
+        <!-- Sistema -->
+
+        <div class="container_grupos">
+            <div class="escrita_grupos">
+                <h1>Equipe de Sistema</h1>
+                <p>Este grupo se responsabiliza pela criação de todo o site, tanto HTML quanto CSS e JS, com o trabalho tentamos trazer a melhor experiência para o usuário.</p>
+                <p><span>Lider:</span> Arthur Biehl</p>
+                <p><span>Integrantes: </span> Gabriel Brandão, Vitor Harthmann, Otávio, Bruno, João Porto, Jorge, Henrique</p>
+            </div>
+            <img src="../img/grupos/" alt="">
+        </div>
     </div>
 
 
