--- a/pages/creditos.html
+++ b/pages/creditos.html
@@ -98,7 +98,7 @@
                 <p><span>Lider:</span> Arthur Biehl</p>
                 <p><span>Integrantes: </span> Gabriel Brandão, Vitor Harthmann, Otávio, Bruno, João Porto, Jorge, Henrique</p>
             </div>
-            <img src="../img/grupos/" alt="">
+            <img src="../img/grupos/sistema.jpeg" alt="">
         </div>
     </div>
 
