--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 
     <div class="politicas">
       <div class="container_politicas">
-        <a class="sbT" href="../pages/politicas.html">NOSSAS POLITICAS</a>
+        <a class="sbT" href="">NOSSAS POLITICAS</a>
       </div>
     </div>
   </footer>
