--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
       <div class="foto_index">
         <div class="container_foto">
-          <img src="../img/index/capa.jpeg" alt="">
+          <img src="../img/index/capa.png" alt="">
         </div>
       </div>
 
@@ -124,12 +124,7 @@
             <div class="icone"><img src="../img/index/email.png" alt="">
               <h3>Email</h3>
             </div>
-            <p class="resp">xirudasilva@xirumail.com</p>
-            <br>
-            <div class="icone"><img src="../img/index/fone.png" alt="">
-              <h3>Whatsapp</h3>
-            </div>
-            <p class="resp">+55 (51) 91234-5678</p>
+            <p class="resp">vc.ensinos2025@gmail.com</p>
             <br>
             <div class="icone"><img src="../img/index/fone.png " alt="">
               <h3>Telefone</h3>
@@ -182,7 +177,7 @@
 
     <div class="politicas">
       <div class="container_politicas">
-        <a class="sbT" href="">NOSSAS POLITICAS</a>
+        <a class="sbT" href="pages/politicas.html">NOSSAS POLITICAS</a>
       </div>
     </div>
   </footer>
