--- a/pages/creditos.html
+++ b/pages/creditos.html
@@ -17,9 +17,8 @@
     <header>
         <div class="container_header_disciplinas">
             <div class="links_disciplinas">
-                <a href="../pages/index.html"><img src="../img/logogGrandeBranca.png" alt=""></a>
+                <a href="../index.html"><img src="../img/logogGrandeBranca.png" alt=""></a>
                 <a href="../pages/disciplinas.html">Explorar</a>
-                <a href="#quem_somos">Quem Somos?</a>
                 <a href="../pages/creditos.html"></a>
             </div>
             <div class="acoes_disciplinas">
@@ -141,7 +140,7 @@
 
         <div class="politicas">
             <div class="container_politicas">
-                <a class="sbT" href="">NOSSAS POLITICAS</a>
+                <a class="sbT" href="politicas.html">NOSSAS POLITICAS</a>
             </div>
         </div>
     </footer>
