--- a/pages/politicas.html
+++ b/pages/politicas.html
@@ -14,7 +14,7 @@
 <body>
     <main>
         <button class="btn-home">
-            <a href="index.html">&#8592;</a>
+            <a href="../index.html">&#8592;</a>
         </button>
 
         <div class="blocoTexto">
