--- a/pages/creditos.html
+++ b/pages/creditos.html
@@ -75,7 +75,7 @@
                 <p><span>Lider:</span> Arthur Vargas</p>
                 <p><span>Integrantes: </span> Joaquim Barbosa, Leonardo Schmitt, Klint Burzlaff, Leonel Enrrique,vitor fernando, William flores, Ariel feix, Ryan yuri rammos</p>
             </div>
-            <img src="../img/grupos/" alt="">
+            <img src="../img/grupos/java.jpeg" alt="">
         </div>
         <!-- web -->
         <div class="container_grupos">
