bug fix img banco3

--- a/Pagina_disciplina/Banco_modulo3/banco3.html
+++ b/Pagina_disciplina/Banco_modulo3/banco3.html
@@ -64,7 +64,7 @@
         <div class="container_footer">
     
           <div class="footer_img">
-            <img src="../img/logogGrandeBranca.png  " alt="" width="200px" height="200px">
+            <img src="../../img/logogGrandeBranca.png  " alt="" width="200px" height="200px">
           </div>
     
           <div class="linha_reta"></div>
