--- a/Pagina_disciplina/Java_modulo1/java1.html
+++ b/Pagina_disciplina/Java_modulo1/java1.html
@@ -102,7 +102,7 @@
         </div>
       </footer>
 
-    <script src="../java_modulo1/java1.js"></script>
+    <script src="../Java_modulo1/java1.js"></script>
 </body>
 
 </html>
